Update src/main/java/io/kestra/plugin/notifications/mail/MailReceive.java
Co-authored-by: François Delbrayelle <fdelbrayelle@gmail.com>